# AIGODLIKE-ComfyUI-Translation

./: .gitignore  LocaleMap.js  MenuTranslate.js  __init__.py  main.js  pyproject.toml  readme.md
.github/workflows/: publish_action.yml
example/: Menu.json  NodeCategory.json
example/Nodes/: internal.json
ja-JP/: NodeCategory.json  menu.json
ja-JP/Nodes/: AlekPet_nodes.json  AnimateDiff.json  BNK_TiledKSampler.json  ComfyUI-Vextra-Nodes.json  ComfyUI-WD14-Tagger.json  ComfyUI_Dave_CustomNode.json  ComfyUI_LatentToRGB.json  ComfyUI_post_processing_nodes.json  ComfyUI_restart_sampling.json  Comfyui_ControlNet_aux.json  Comfyui_Cutoff.json  Comfyui_Noise.json  ControlNet-LLLite-ComfyUI.json  Derfuu_ComfyUI_ModdedNodes.json  Efficiency Nodes.json  IPAdapter.json  ImpactPack.json  SeargeSDXL.json  Stability.json  UltimateSDUpscale.json  WAS_suite.json  advanced_encode.json  clip_seg.json  comfy-qr.json  comfy_controlnet_preprocessors.json  comfyui_dagthoma.json  custom_node_experiments.json  fastDecoder.json  images_grid_comfy_plugin.json  internal.json  sdxl_prompt_styler.json
ko-KR/: Menu.json  NodeCategory.json
ko-KR/Nodes/: internal.json
ru-RU/: Menu.json  NodeCategory.json  NodeCategory.json.bak
ru-RU/Nodes/: AlekPet_nodes.json  ComfyUI-Crystools.json  ComfyUI-Manager.json  advanced_encode.json  comfy_mtb.json  internal.json
zh-CN/: Menu.json  NodeCategory.json
zh-CN/Categories/: ComfyUI-3D-MeshTool.json  ComfyUI-3D-Pack.json  ComfyUI-Advanced-ControlNet.json  ComfyUI-ControlNeXt-SVD.json  ComfyUI-Crystools.json  (+20 more)
zh-TW/: Menu.json  NodeCategory.json
(+228 files in other folders)
