[project]
name = "aigodlike-comfyui-translation"
description = "It provides language settings. (Contribution from users of various languages is needed due to the support for each language.)"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/AIGODLIKE/AIGODLIKE-COMFYUI-TRANSLATION"

[tool.comfy]
PublisherId = ""
DisplayName = "AIGODLIKE-ComfyUI-Translation"
Icon = ""