[project]
name = "aigodlike-comfyui-translation"
description = "It provides language settings. (Contribution from users of various languages is needed due to the support for each language.)"
version = "1.0.1"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/AIGODLIKE/AIGODLIKE-COMFYUI-TRANSLATION"

[tool.comfy]
PublisherId = "aigodlike"
DisplayName = "AIGODLIKE-ComfyUI-Translation"
Icon = ""